# Callifornia2

./: .dockerignore  .gitignore  .gitmodules  README.md
client/: .env.example  Cargo.toml  eslint.config.js  index.html  main_menu.html  package-lock.json  package.json  prettier.config.js  style.css  tailwind.config.js  tsconfig.app.json
client/scripts/: png_to_svg.py
client/src/: App.tsx  app.rs  components.rs  connector_api.rs  handlers.rs  index.css  main.rs  nickname.rs  nickname_entry.rs  screen_share_pick.rs  signaling.rs  theme.rs  vite-env.d.ts  webrtc_room.rs
client/src/components/: ControlBar.tsx  DeviceMenu.tsx  ErrorBoundary.tsx  LinkShareDialog.tsx  ParticipantTile.tsx  VideoGrid.tsx  device_settings_left_panel.rs  join_room_entry.rs  main_menu.rs  nickname_entry.rs  room.rs  screen_share_dialog.rs  settings_panel.rs  theme_toggle.rs
client/src/components/device_settings_left_panel/: data.rs  mod.rs
client/src/components/main_menu/: icons.rs  mod.rs
client/src/components/room/: layout.rs  participant_tile.rs  tiles.rs
client/src/components/settings_panel/: data.rs
client/src/components/ui/: button.tsx  input.tsx
client/src/config/: env.ts
client/src/hooks/: useReconnect.ts  useToasts.ts
client/src/lib/: logger.ts  ws.ts
client/src/nickname/: actions.rs  validation.rs
client/src/routes/: LobbyRoute.tsx  LoginRoute.tsx  RoomRoute.tsx
client/src/services/: callOrchestrator.ts  connector.ts  signaling.ts  webrtc.ts
client/src/stores/: authStore.ts  callStore.ts  mediaStore.ts
client/src/types/: errors.ts  protocol.ts
client/styles/: device-settings-left-panel.css  fonts.css  join-room-entry.css  layout.css  main-menu.css  nickname-entry.css  room.css  screen-share-dialog.css  settings-panel.css  theme-toggle.css  tokens.css  typography.css
common/control_store/: Cargo.toml
common/control_store/src/: keys.rs  lib.rs  models.rs  storage.rs
common/proto/: signaling.proto  signaling_admin.proto
connector/: Cargo.toml
connector/src/: config.rs  main.rs  message.rs  redis.rs  token.rs
deploy/: .env.example  README.md  compose.yaml  howTo.md
deploy/docker/: connector.Dockerfile  sfu.Dockerfile  signaling.Dockerfile  supervisor.Dockerfile
deploy/nginx/: default.conf
proto/: room_manager.proto  sfu.proto  signaling.proto
room_manager/: build.rs
room_manager/src/: config.rs  main.rs  models.rs  proto.rs  runtime.rs  service.rs  storage.rs
services/connector/: Cargo.toml
services/connector/src/: config.rs  main.rs  redis.rs
services/room_manager/: Cargo.toml  build.rs
services/room_manager/src/: config.rs  main.rs  models.rs  service.rs  storage.rs  util.rs
services/signaling/: Cargo.toml  build.rs
services/signaling/src/: admin.rs  auth.rs  config.rs  main.rs  message.rs  peer_registry.rs  redis.rs  room_manager.rs  session_registry.rs  sfu.rs  state.rs  websocket.rs
services/supervisor/: Cargo.toml  build.rs
services/supervisor/src/: config.rs  main.rs  probes.rs  proto.rs
sfu/: CMakeLists.txt  CMakeSettings.json
sfu/src/: event_router.cpp  event_router.h  ice_config.cpp  ice_config.h  main.cpp  peer_session.cpp  peer_session.h  room.cpp  room.h  sfu_runtime.cpp  sfu_runtime.h  sfu_service_impl.cpp  sfu_service_impl.h
signaling/: Cargo.toml  build.rs
signaling/src/: app_state.rs  auth.rs  config.rs  main.rs  message.rs  peer_registry.rs  redis.rs  room_manager.rs  session_registry.rs  sfu.rs  state.rs  websocket.rs
