[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
gloo-net = { version = "0.6", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.97", features = ["Document", "Element", "Event", "EventTarget", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "KeyboardEvent", "MediaQueryList", "Window"] }
yew = { version = "0.23.0", features = ["csr"] }
