[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.97", features = [
  "Clipboard", "CloseEvent", "console", "Document", "Element", "ErrorEvent", "Event", "EventTarget",
  "HtmlElement", "HtmlFormElement", "HtmlInputElement", "HtmlMediaElement", "HtmlVideoElement",
  "KeyboardEvent", "MediaDevices", "MediaQueryList", "MediaStream", "MediaStreamConstraints",
  "MediaStreamTrack", "MessageEvent", "Navigator", "ResizeObserver",
  "RtcConfiguration", "RtcIceCandidate", "RtcIceServer",
  "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcRtpSender",
  "RtcSdpType", "RtcSessionDescriptionInit", "RtcTrackEvent",
  "WebSocket", "Window",
] }
yew = { version = "0.23.0", features = ["csr"] }
