[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
dotenv = "0.15"
futures-util = "0.3"
jsonwebtoken = { version = "10.3.0", features = ["hmac"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
