[package]
name = "control_store"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
