[package]
name = "room_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenv = "0.15"
prost = "0.14"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
