[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
control_store = { path = "../../common/control_store" }
prost = "0.14"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
